[package]
name = "waitfor-cli"
description = "CLI utility to retry commands until they exit 0"
homepage = "https://github.com/askreet/waitfor"
repository = "https://github.com/askreet/waitfor"
readme = "README.md"
version = "0.1.1"
authors = ["Kyle Smith <askreet@gmail.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
structopt = "0.3"
num-format = { version = "0.4", features = ["with-system-locale"] }

[[bin]]
name = "waitfor"
path = "src/main.rs"